src/test/ui/issues/issue-18959.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-18959.rs:11:11
   |
LL | fn foo(b: &dyn Bar) {
   |           ^^^^^^^^ `Bar` cannot be made into an object
   |
   = help: consider moving `foo` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-18959.rs:1:20
   |
LL | pub trait Foo { fn foo<T>(&self, ext_thing: &T); }
   |                    ^^^ ...because method `foo` has generic type parameters
LL | pub trait Bar: Foo { }
   |           --- this trait cannot be made into an object...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
